src/test/deca/extension/context/invalid/test_mauvaise_selection_champs.deca
// Description:
// Test la mauvaise selection de champ d'un tableau
// les deux champs possible sont size1D(tableau 1d et 2d ) et size2D(tableau 2d)
// Resultats: 
//  TEST pas valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    float[][] tableauFloat = new float[][];
    print(tableauFloat.randomName);
}
